refactor: simplify code wherever possible
We can use modern Java features.  OpenJML's latest supported version is
for JDK 21.